styles.css
*,
::before,
::after {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: rgb(0, 122, 184);
}

h4 a {
  color: #fff;
}

a:hover {
  text-decoration: underline;
}

li {
  list-style: none;
  flex: 1;
  padding: 0 5px;
  display: flex;
  align-items: center;
  border-right: 1px solid #d1d1d1;
  justify-content: center;
}

.item {
  color: #eee;
  font-family: 'Cabin', sans-serif;
  font-size: 80%;
  font-weight: 600;
  text-shadow: 1px 1px #555;
}

input {
  background-color: rgb(225, 225, 225, 0.1);
  background-image: url(images/search-icon.png);
  background-size: 17%;
  background-position: 4% 80%;
  background-repeat: no-repeat;
  border: none;
  border-radius: 30px;
  box-shadow: inset 0 2px 1px #333;
  width: 80%;
  height: 20px;
  padding: 4px 0 2px 7px;
}

input:focus,
input:active {
  background-image: none;
  outline: none;
}

.upper {
  display: flex;
  align-items: center;
  flex-direction: column;
  background-image: url(images/hero.jpg);
  background-position: 10% 95%;
  background-repeat: no-repeat;
  height: 93vh;
  width: 100%;
}

.menu {
  width: 73%;
  height: 7%;
  min-height: 20px;
  display: flex;
  background: linear-gradient(180deg, rgb(116, 116, 116) 47%, rgb(87, 87, 87) 48%, rgba(137, 137, 137, 1) 120%);
  border: 0.5px solid #666;
  margin-top: 6%;
  border-radius: 7px;
  box-shadow: 0 2px 1px rgba(112, 112, 112, 0.4);
}

.menu a,
.input-div {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  border-right: 0.8px solid #555;
  box-shadow: inset 1px 0 #999;
}

.menu a:hover {
  text-decoration: none;
  background-color: rgba(5, 5, 5, 0.4);
}

.menu a:first-child div span i {
  font-size: 23px;
}

.input-div {
  flex: none;
  width: 135px;
  border-right: none;
}

h2,
h3,
h4 {
  font-family: 'Roboto', sans-serif;
  color: #fff;
  text-align: center;
}

h2 {
  font-weight: 100;
  font-size: 60px;
  margin-top: 35px;
}

h3 {
  font-weight: 300;
  font-size: 32px;
  margin-top: 20px;
  width: 65%;
}

h4 {
  font-weight: 300;
  font-size: 24px;
  margin-top: 30px;
  width: 42%;
  display: inline-block;
}

.play-icon {
  width: 31px;
  height: 31px;
  background-image: url(images/play-icon.png);
  background-position: 76.8% 0;
  float: right;
}

.bottom {
  margin-top: 1px;
  width: 100%;
}

.thumbs {
  display: flex;
  width: 100%;
}

.thumb {
  width: 25vw;
  height: 15vw;
}

.t-1 {
  background-image: url(images/thumb-1.jpg);
  background-size: cover;
}

.t-2 {
  background-image: url(images/thumb-2.jpg);
  background-size: cover;
}

.t-3 {
  background-image: url(images/thumb-3.jpg);
  background-size: cover;
}

.t-4 {
  background-image: url(images/thumb-4.jpg);
  background-size: cover;
}

footer {
  font-family: 'Cabin', sans-serif;
  font-size: 10.5px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  padding: 20px 10% 10px;
  width: 100%;
  color: #6e6e6e;
}

footer div {
  grid-row: 1 / 3;
  grid-column: 1;
  grid-gap: 20px;
  display: flex;
  flex-direction: column;
}

ul {
  display: flex;
  height: 15px;
}

li:first-child,
li:nth-child(2) {
  flex: 0.5;
}

li:nth-child(3),
li:nth-child(4),
li:nth-child(5),
li:nth-child(7) {
  flex: 0.55;
}

li:last-child {
  flex: 0.25;
  border-right: none;
}

@media screen and (min-width: 1500px) {
  .upper {
    background-size: 120%;
  }
}

@media screen and (min-width: 769px) and (max-width: 900px) {
  .upper {
    height: 80vw;
  }
}

/* TABLETS */
@media screen and (max-width: 768px) {
  .menu {
    width: 95%;
    height: 3.5%;
  }

  .item {
    font-size: 70%;
  }

  .upper {
    background-size: 1024px;
    background-position: 50% 90%;
    height: 80vh;
  }

  .play-icon {
    width: 20px;
    height: 20px;
    background-position: 76.5% 0;
    background-size: 600px;
  }

  h2 {
    font-weight: 100;
    font-size: 5vh;
    margin-top: 8vh;
  }

  h3 {
    font-weight: 300;
    font-size: 2.5vh;
    margin-top: 20px;
    width: 80%;
  }

  h4 {
    font-weight: 300;
    font-size: 2vh;
    margin-top: 30px;
    width: 65%;
    display: flex;
    justify-content: center;
  }

  footer {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    row-gap: 2vh;
  }

  footer div {
    grid-row: 1;
    display: flex;
    flex-direction: column;
  }
}

/* SMARTPHONES */
@media screen and (max-width: 425px) {
  .menu {
    width: 95vw;
    height: 2.5vh;
  }

  input {
    height: 1.7vh;
    font-size: 1vh;
    background-size: 9%;
  }

  .item {
    font-size: 50%;
    vertical-align: middle;
  }

  .fab {
    font-size: 2vh;
  }

  .upper {
    background-size: 768px auto;
    background-position: 50% 90%;
    height: 60vh;
  }

  .play-icon {
    width: 23px;
    height: 23px;
    background-size: 700px;
  }

  .thumbs {
    flex-wrap: wrap;
    justify-content: space-around;
    margin-top: 0.5vh;
  }

  .thumb {
    width: 49vw;
    height: 27vw;
  }

  h2 {
    font-weight: 100;
    font-size: 5vh;
    margin-top: 8vh;
  }

  h3 {
    font-weight: 300;
    font-size: 2.5vh;
    margin-top: 20px;
    width: 80%;
  }

  h4 {
    font-weight: 300;
    font-size: 1.5vh;
    margin-top: 30px;
    width: 70%;
    display: flex;
    align-items: center;
  }

  footer {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(2, 1fr);
    margin: 0;
    padding-left: 1vw;
  }

  footer div {
    grid-row: 1;
    grid-gap: 0;
    display: flex;
    flex-direction: column;
  }

  ul {
    margin-top: 2vh;
  }
}

